--- a/Aier360/Controllers/校园/公告/Announcement.storyboard
+++ b/Aier360/Controllers/校园/公告/Announcement.storyboard
@@ -1,7 +1,159 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Navigation Controller-->
+        <scene sceneID="8R1-b2-VXX">
+            <objects>
+                <navigationController id="IJl-U0-2s7" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="vw3-fM-5B9" customClass="ZXNavigationBar">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="barTintColor" red="0.1019607843" green="0.1176470588" blue="0.12941176469999999" alpha="1" colorSpace="calibratedRGB"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        </textAttributes>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="WQj-p9-ms2" kind="relationship" relationship="rootViewController" id="1Jv-MN-ZHa"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Sps-WH-j5i" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-103" y="404"/>
+        </scene>
+        <!--Announcement View Controller-->
+        <scene sceneID="ybr-Ex-2Fx">
+            <objects>
+                <viewController storyboardIdentifier="ZXAnnouncementViewController" id="WQj-p9-ms2" customClass="ZXAnnouncementViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="w2Y-MD-7v2"/>
+                        <viewControllerLayoutGuide type="bottom" id="hMh-rh-v6A"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="hFe-v3-ONd">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="110" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="73n-UD-NGX">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="107" id="VWM-Vx-UTZ" customClass="ZXAnnouncementCell">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="VWM-Vx-UTZ" id="FMt-lr-CeH">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GeL-za-TMf">
+                                                    <rect key="frame" x="15" y="12" width="40" height="20"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" red="0.37254901960784315" green="0.37254901960784315" blue="0.37254901960784315" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ur1-El-odg">
+                                                    <rect key="frame" x="565" y="12" width="20" height="20"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="20" id="3bV-lE-llN"/>
+                                                        <constraint firstAttribute="height" constant="20" id="ank-1Y-9RY"/>
+                                                    </constraints>
+                                                    <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                    <state key="normal" backgroundImage="head_default">
+                                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                    </state>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                            <integer key="value" value="10"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                                                    </userDefinedRuntimeAttributes>
+                                                    <connections>
+                                                        <action selector="headButtonAction:" destination="WQj-p9-ms2" eventType="touchUpInside" id="fFN-mf-u6a"/>
+                                                    </connections>
+                                                </button>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lBv-oT-hUI">
+                                                    <rect key="frame" x="15" y="45" width="38" height="18"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <color key="textColor" red="0.55686274509803924" green="0.54117647058823526" blue="0.50196078431372548" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VZB-we-IjO">
+                                                    <rect key="frame" x="15" y="78" width="33" height="16"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                    <color key="textColor" red="0.63137254901960782" green="0.61568627450980395" blue="0.58039215686274503" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="heC-cH-qDy">
+                                                    <rect key="frame" x="552" y="78" width="33" height="16"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                    <color key="textColor" red="0.63137254901960782" green="0.61568627450980395" blue="0.58039215686274503" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="announcement_read_gray" translatesAutoresizingMaskIntoConstraints="NO" id="qqL-Wh-68u">
+                                                    <rect key="frame" x="528" y="79" width="16" height="14"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="16" id="RIb-9O-Ger"/>
+                                                        <constraint firstAttribute="height" constant="14" id="tw9-io-65n"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                            <color key="backgroundColor" red="1" green="0.98823529409999999" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="heC-cH-qDy" secondAttribute="bottom" constant="12" id="2T9-jA-AsV"/>
+                                                <constraint firstItem="lBv-oT-hUI" firstAttribute="top" secondItem="GeL-za-TMf" secondAttribute="bottom" constant="13" id="8Cp-8g-wpX"/>
+                                                <constraint firstItem="VZB-we-IjO" firstAttribute="top" secondItem="lBv-oT-hUI" secondAttribute="bottom" constant="15" id="A8O-bM-2Bo"/>
+                                                <constraint firstItem="GeL-za-TMf" firstAttribute="leading" secondItem="FMt-lr-CeH" secondAttribute="leading" constant="15" id="CSP-ah-NCj"/>
+                                                <constraint firstAttribute="bottom" secondItem="VZB-we-IjO" secondAttribute="bottom" constant="12" id="Jny-Ei-c9P"/>
+                                                <constraint firstItem="GeL-za-TMf" firstAttribute="top" secondItem="FMt-lr-CeH" secondAttribute="top" constant="12" id="NaK-lp-2Me"/>
+                                                <constraint firstAttribute="trailing" secondItem="heC-cH-qDy" secondAttribute="trailing" constant="15" id="P73-J7-Dz4"/>
+                                                <constraint firstItem="heC-cH-qDy" firstAttribute="centerY" secondItem="qqL-Wh-68u" secondAttribute="centerY" id="Rkp-Oh-9sR"/>
+                                                <constraint firstItem="ur1-El-odg" firstAttribute="top" secondItem="FMt-lr-CeH" secondAttribute="top" constant="12" id="S1z-gn-Om4"/>
+                                                <constraint firstItem="lBv-oT-hUI" firstAttribute="leading" secondItem="FMt-lr-CeH" secondAttribute="leading" constant="15" id="Tzv-pf-g7K"/>
+                                                <constraint firstAttribute="trailing" secondItem="ur1-El-odg" secondAttribute="trailing" constant="15" id="YLv-Jb-rpO"/>
+                                                <constraint firstItem="heC-cH-qDy" firstAttribute="leading" secondItem="qqL-Wh-68u" secondAttribute="trailing" constant="8" id="lv2-l3-mxq"/>
+                                                <constraint firstItem="VZB-we-IjO" firstAttribute="leading" secondItem="FMt-lr-CeH" secondAttribute="leading" constant="15" id="nPX-iU-Je1"/>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="lBv-oT-hUI" secondAttribute="trailing" constant="15" id="niZ-PI-Ale"/>
+                                                <constraint firstItem="ur1-El-odg" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="GeL-za-TMf" secondAttribute="trailing" constant="8" id="zMs-vH-bWs"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="contentLabel" destination="lBv-oT-hUI" id="E0E-Ec-0K9"/>
+                                            <outlet property="headButton" destination="ur1-El-odg" id="DC0-xl-9jj"/>
+                                            <outlet property="readingLabel" destination="heC-cH-qDy" id="P9V-yz-KPW"/>
+                                            <outlet property="timeLabel" destination="VZB-we-IjO" id="47w-Jn-tln"/>
+                                            <outlet property="titleLabel" destination="GeL-za-TMf" id="GhZ-e5-a3b"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="WQj-p9-ms2" id="1W4-I9-ZDr"/>
+                                    <outlet property="delegate" destination="WQj-p9-ms2" id="AKU-bC-msS"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="73n-UD-NGX" secondAttribute="trailing" id="Itd-RT-XXw"/>
+                            <constraint firstItem="73n-UD-NGX" firstAttribute="leading" secondItem="hFe-v3-ONd" secondAttribute="leading" id="LWO-q9-EDh"/>
+                            <constraint firstItem="hMh-rh-v6A" firstAttribute="top" secondItem="73n-UD-NGX" secondAttribute="bottom" id="LgI-ch-6ED"/>
+                            <constraint firstItem="73n-UD-NGX" firstAttribute="top" secondItem="w2Y-MD-7v2" secondAttribute="bottom" id="UpL-i9-eKi"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="7wD-md-D5C"/>
+                    <connections>
+                        <outlet property="tableView" destination="73n-UD-NGX" id="JMG-a9-XhF"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aUa-J8-xxr" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="555" y="410"/>
+        </scene>
+    </scenes>
+    <resources>
+        <image name="announcement_read_gray" width="16" height="14"/>
+        <image name="head_default" width="149" height="149"/>
+    </resources>
 </document>
