--- a/Aier360/Controllers/校园/公告/Announcement.storyboard
+++ b/Aier360/Controllers/校园/公告/Announcement.storyboard
@@ -176,6 +176,9 @@
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="发件人:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W2J-je-TLw">
                                                     <rect key="frame" x="15" y="6" width="50" height="18"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="50" id="yhw-Ff-Cfe"/>
+                                                    </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                     <color key="textColor" red="0.63137254901960782" green="0.61568627450980395" blue="0.58039215686274503" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
@@ -192,6 +195,7 @@
                                                 <constraint firstItem="W2J-je-TLw" firstAttribute="top" secondItem="9Ha-b5-2te" secondAttribute="top" constant="6" id="714-Xu-1g8"/>
                                                 <constraint firstItem="o8l-HW-xxf" firstAttribute="top" secondItem="9Ha-b5-2te" secondAttribute="top" constant="6" id="Orr-SF-tno"/>
                                                 <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="o8l-HW-xxf" secondAttribute="trailing" constant="15" id="TfU-3c-c0x"/>
+                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="W2J-je-TLw" secondAttribute="bottom" constant="5" id="bQR-32-1nY"/>
                                                 <constraint firstAttribute="bottom" secondItem="o8l-HW-xxf" secondAttribute="bottom" constant="5" id="fk8-tK-Xau"/>
                                                 <constraint firstItem="W2J-je-TLw" firstAttribute="leading" secondItem="9Ha-b5-2te" secondAttribute="leading" constant="15" id="gj1-Hg-GvD"/>
                                                 <constraint firstItem="o8l-HW-xxf" firstAttribute="leading" secondItem="W2J-je-TLw" secondAttribute="trailing" constant="8" id="z3y-Ih-ANR"/>
@@ -287,6 +291,7 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="collecionViewHeight" destination="6AV-aL-zge" id="418-YQ-A76"/>
                                             <outlet property="collectionView" destination="QM1-t4-ehQ" id="t25-1M-GHX"/>
                                             <outlet property="contentLabel" destination="IhK-4W-H7n" id="gOO-n2-gZz"/>
                                             <outlet property="timeLabel" destination="Gj5-lz-DD1" id="Tuq-NQ-V3M"/>
@@ -646,37 +651,14 @@
                                             <outlet property="collectionView" destination="hOO-yS-YPc" id="dLV-aR-ruK"/>
                                         </connections>
                                     </tableViewCell>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="cell" textLabel="gb9-eG-C4W" detailTextLabel="KwF-Cc-uem" rowHeight="45" style="IBUITableViewCellStyleValue1" id="buq-oa-2bp">
-                                        <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="buq-oa-2bp" id="AmC-AC-wwp">
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="收件人" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="gb9-eG-C4W">
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                                    <color key="textColor" red="0.37254901960784315" green="0.37254901960784315" blue="0.37254901960784315" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="请选择" textAlignment="right" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="KwF-Cc-uem">
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                                    <color key="textColor" red="0.70196078431372544" green="0.69019607843137254" blue="0.6588235294117647" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                            <color key="backgroundColor" red="1" green="0.98823529409999999" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
-                                        </tableViewCellContentView>
-                                        <color key="backgroundColor" red="1" green="0.98823529409999999" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
-                                    </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ZXAnnouncementTitleCell" rowHeight="45" id="klK-WG-Qll" customClass="ZXAnnouncementTitleCell">
                                         <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="klK-WG-Qll" id="Q22-9S-DjV">
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="公告标题" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0LQ-ne-xKj">
-                                                    <rect key="frame" x="15" y="12" width="545" height="20"/>
+                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="公告标题" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0LQ-ne-xKj">
+                                                    <rect key="frame" x="15" y="12" width="549" height="20"/>
                                                     <color key="textColor" red="0.70196078429999997" green="0.69019607839999997" blue="0.6588235294" alpha="1" colorSpace="calibratedRGB"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                     <textInputTraits key="textInputTraits" returnKeyType="done"/>
@@ -741,6 +723,40 @@
                                         <connections>
                                             <outlet property="letterLabel" destination="Kup-G3-ttW" id="2fU-Fb-FH9"/>
                                             <outlet property="textView" destination="ym2-Gb-sSD" id="vex-O0-iCO"/>
+                                        </connections>
+                                    </tableViewCell>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="ZXMenuCell" rowHeight="45" id="r5E-Mp-jYi" customClass="ZXMenuCell">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="r5E-Mp-jYi" id="XdY-5k-0gn">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="收件人" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2m8-CO-gun">
+                                                    <rect key="frame" x="15" y="12" width="48" height="20"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" red="0.37254901959999998" green="0.37254901959999998" blue="0.37254901959999998" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="请选择" textAlignment="right" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IZJ-q6-2Lv">
+                                                    <rect key="frame" x="519" y="12" width="48" height="20"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" red="0.70196078429999997" green="0.69019607839999997" blue="0.6588235294" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" red="1" green="0.98823529409999999" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="IZJ-q6-2Lv" secondAttribute="bottom" constant="12" id="19Q-7S-dy7"/>
+                                                <constraint firstItem="IZJ-q6-2Lv" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="2m8-CO-gun" secondAttribute="trailing" constant="15" id="B4f-cc-bk8"/>
+                                                <constraint firstItem="2m8-CO-gun" firstAttribute="top" secondItem="XdY-5k-0gn" secondAttribute="top" constant="12" id="bhF-YD-AUn"/>
+                                                <constraint firstItem="2m8-CO-gun" firstAttribute="leading" secondItem="XdY-5k-0gn" secondAttribute="leading" constant="15" id="dLA-gy-KQZ"/>
+                                                <constraint firstAttribute="trailing" secondItem="IZJ-q6-2Lv" secondAttribute="trailing" id="qgP-DF-VW1"/>
+                                                <constraint firstItem="IZJ-q6-2Lv" firstAttribute="top" secondItem="XdY-5k-0gn" secondAttribute="top" constant="12" id="tDA-OX-37B"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="hasNewLabel" destination="IZJ-q6-2Lv" id="LXl-ob-K3j"/>
+                                            <outlet property="titleLabel" destination="2m8-CO-gun" id="ufT-Dd-hFY"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
